# LLMOps

./: .gitignore  README.md  main.py  pyproject.toml  requirement.txt  setup.py
app/backend/: api.py
app/common/: customException.py  logger.py
app/config/: settings.py
app/core/: ai_agent.py
app/frontend/: ui.py
